Feature: Adding Historial and logs functions for auxiliary books